--- a/.env
+++ b/.env
@@ -22,8 +22,8 @@ _APP_USAGE_DATABASE_INTERVAL=900
 _APP_WORKER_PER_CORE=6
 _APP_REDIS_HOST=redis
 _APP_REDIS_PORT=6379
-_APP_REDIS_USER=
-_APP_REDIS_PASS=
+_APP_REDIS_USER=usr
+_APP_REDIS_PASS=pass
 _APP_DB_HOST=mariadb
 _APP_DB_PORT=3306
 _APP_DB_SCHEMA=appwrite
@@ -72,7 +72,7 @@ _APP_FUNCTIONS_TIMEOUT=900
 _APP_FUNCTIONS_BUILD_TIMEOUT=900
 _APP_FUNCTIONS_CONTAINERS=10
 _APP_FUNCTIONS_CPUS=
-_APP_FUNCTIONS_MEMORY=256
+_APP_FUNCTIONS_MEMORY=1024
 _APP_FUNCTIONS_MEMORY_SWAP=256
 _APP_FUNCTIONS_RUNTIMES=node-16.0,php-8.0,python-3.9,ruby-3.0,java-16.0
 _APP_EXECUTOR_SECRET=your-secret-key
